[FIX] estate: upkeep attendance ratio should equal to number of day
[FIX] estate: upkeep attendance ratio should equal to number of day

[FIX] estate: support contract based upkeep activity

* Add option to master activity.
* Define upkeep activity as contract.
* Calculate wage based on quantity

[FIX] estate_workshop:Feature 9 agustus

[FIX] estate_workshop:Feature 9 agustus

--- a/estate/views/estate_activity_view.xml
+++ b/estate/views/estate_activity_view.xml
@@ -34,6 +34,7 @@
                         <group name="type" string="Activity">
                             <field name="code"/>
                             <field name="activity_type"/>
+                            <field name="contract"/>
                         </group>
                     </group>
 
