--- a/estate/views/inherited_product_category_view.xml
+++ b/estate/views/inherited_product_category_view.xml
@@ -7,7 +7,7 @@
             <field name="model">product.category</field>
             <field name="inherit_id" ref="product.product_category_form_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//group[@name='parent']" position="inside">
+                <xpath expr="//group[@name='first']" position="inside">
                     <group name="estate_category" string="Estate Properties" colspan="2">
                         <field name="estate_product"/>
                     </group>
