--- a/estate_payroll/views/report_estate_payslip.xml
+++ b/estate_payroll/views/report_estate_payslip.xml
@@ -29,9 +29,9 @@
                                             <th colspan="4" class="text-center">Wage</th>
                                             <th rowspan="2">Allowance</th>
                                             <th rowspan="2">Deduction</th>
-                                            <th rowspan="2">Total</th>
+                                            <th rowspan="2">Sub Total</th>
                                             <th colspan="3" class="text-center">Other</th>
-                                            <th rowspan="2">Total (taxed)</th>
+                                            <th rowspan="2">Sub Total</th>
                                             <th rowspan="2" colspan="2">Signature</th>
                                         </tr>
                                         <tr>
@@ -47,9 +47,11 @@
                                     </thead>
                                     <tbody>
                                         <t t-set="amount_total_team" t-value="0"/>
+                                        <t t-set="amount_total_other" t-value="0"/>
                                         <t t-set="no" t-value="0"/>
                                         <t t-set="last_row" t-value="len(get_payslip_team(team.id))"/>
                                         <t t-set="round" t-value="1000"/>
+
                                         <t t-foreach="get_payslip_team(team.id)" t-as="payslip">
                                             <!-- only print payslip with done state -->
                                             <t t-if="payslip.state== 'done'">
@@ -57,25 +59,36 @@
                                                     <t t-set="amount_edw" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'EDW')"/>
                                                     <t t-set="amount_ot" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'OT')"/>
                                                     <t t-set="amount_pr" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'PR')"/>
-                                                    <t t-set="amount_total" t-value="amount_edw+amount_ot+amount_pr"/>
+                                                    <t t-set="jhte" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JHTE')"/>
+                                                    <t t-set="jhtc" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JHTC')"/>
+                                                    <t t-set="jkkc" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JKKC')"/>
+                                                    <t t-set="jkmc" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JKMC')"/>
+                                                    <t t-set="bpjspkwte" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'BPJSPKWTE')"/>
+                                                    <t t-set="bpjspkwtc" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'BPJSPKWTC')"/>
+                                                    <t t-set="amount_bpjs_labour" t-value="jhte+jhtc+jkkc+jkmc"/>
+                                                    <t t-set="amount_bpjs_health" t-value="bpjspkwte+bpjspkwtc"/>
+                                                    <t t-set="amount_deduction" t-value="jhte+bpjspkwte"/>
+                                                    <t t-set="amount_total" t-value="(amount_edw+amount_ot+amount_pr)-amount_deduction"/>
+                                                    <t t-set="amount_sub_total_other" t-value="amount_bpjs_labour+amount_bpjs_health"/>
                                                     <t t-set="amount_total_team" t-value="amount_total_team+amount_total"/>
-
+                                                    <t t-set="amount_total_other" t-value="amount_total_other+amount_sub_total_other"/>
                                                     <t t-set="no" t-value="no+1"/>
+
                                                     <td><t t-esc="no"/></td>
                                                     <td><span t-field="payslip.employee_id.name"/></td>
                                                     <td><span t-field="payslip.employee_id.nik_number"/></td>
-                                                    <td><span t-field="payslip.employee_id.contract_type"/></td>
+                                                    <td><span t-field="payslip.employee_id.contract_type"/>/<span t-field="payslip.employee_id.contract_period"/></td>
                                                     <td><span t-field="payslip.worked_days_line_ids[0].number_of_days"/></td>
                                                     <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_edw)"/></td>
                                                     <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_ot)"/></td>
                                                     <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_pr)"/></td>
-                                                    <td class="text-right">0</td>
-                                                    <td class="text-right">0</td>
+                                                    <td class="text-right"></td>
+                                                    <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_deduction)"/></td>
                                                     <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_total)"/></td>
+                                                    <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_bpjs_labour)"/></td>
+                                                    <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_bpjs_health   )"/></td>
                                                     <td class="text-right">0</td>
-                                                    <td class="text-right">0</td>
-                                                    <td class="text-right">0</td>
-                                                    <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_total)"/></td>
+                                                    <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_sub_total_other)"/></td>
 
                                                     <!-- Last row use colspan instead of rowspan -->
                                                     <t t-if="no%2!=0">
@@ -91,11 +104,16 @@
                                             </t>
                                         </t>
                                         <tr>
-                                            <td colspan="10" class="text-right"><strong>Total Gross</strong></td>
+                                            <td colspan="10" class="text-right"><strong>Total Payslip</strong></td>
                                             <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_total_team)"/></td>
-                                            <td colspan="3" class="text-right"><strong>Total Net</strong></td>
-                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_total_team)"/></td>
-                                            <td colspan="2"></td>
+                                            <td colspan="3" class="text-right"><strong>Total Other</strong></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_total_other)"/></td>
+                                            <!-- Last row use colspan instead of rowspan -->
+                                            <t t-if="no%2!=0">
+                                                <t t-if="no==last_row">
+                                                    <td colspan="2" style="width:20%"></td>
+                                                </t>
+                                            </t>
                                         </tr>
                                     </tbody>
                                 </table>
