[FIX] estate : enhance constrains
* Limit min and max of upkeep date
* Define assistant - get first block.
* Get block's location and its parent.
* Support sub block (block 2 deep down from division).
* Use stock location method to get division.
* Move overtime amount to regional wage.
* No multi activity
* Support PKWT Daily Target (input at quantity field)
* Keep activity unit amount greater than or equal sum of labour's quantity.
* Delete Upkeep Activity invalidate sum of labour quantity
* Fix Validation Error pop-up
* Validate Upkeep Labour and Material Usage activity to Upkeep Activity

--- a/estate/views/estate.xml
+++ b/estate/views/estate.xml
@@ -72,6 +72,7 @@
                         </group>
 
                         <group string="Areal Statement" attrs="{'invisible': [('estate_location_type','=', 'nursery')]}">
+                            <field name="closing"/>
                             <field name="planted_year_id"
                                    attrs="{'invisible': [('estate_location_level','in', ('1','2'))]}"/>
                             <field name="qty_tree"/>
