--- a/estate/views/estate_hr_view.xml
+++ b/estate/views/estate_hr_view.xml
@@ -94,6 +94,7 @@
                             <field name="wage"/>
                             <field name="number_of_days"/>
                             <field name="daily_wage"/>
+                            <field name="overtime_amount"/>
                         </group>
                     </group>
                     <separator string="Additional Information"/>
