--- a/estate/views/estate_upkeep.xml
+++ b/estate/views/estate_upkeep.xml
@@ -247,6 +247,11 @@
                                             type="object"
                                             help="Calculate labour's work result which has attendance code. It will reset previous entry."
                                             attrs="{'invisible': [('state', '!=', 'draft')]}"/>
+                                    <button string="Reset"
+                                            name="reset_all_quantity"
+                                            type="object"
+                                            help="Reset all quantity, overtime, piece rate"
+                                            attrs="{'invisible': [('state', '!=', 'draft')]}"/>
                                 </div>
                                 <field name="labour_line_ids" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}">
                                     <tree editable="True" colors="orange:prod_quantity_day&lt;100">
@@ -436,7 +441,7 @@
                                     </group>
                                     <group>
                                         <field name="quantity" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
-                                        <field name="quantity_overtime" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
+                                        <field name="quantity_overtime" widget="float_time" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                         <field name="quantity_piece_rate" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                     </group>
                                 </group>
