--- a/estate/views/estate.xml
+++ b/estate/views/estate.xml
@@ -38,7 +38,7 @@
             <field name="arch" type="xml">
                 <tree string="Estate Block"
                       default_order="complete_name"
-                      colors="blue:estate_location_level!='3'">
+                      colors="blue:estate_location_level in ['1','2']">
                     <field name="complete_name"/>
                     <field name="estate_location_type"/>
                     <field name="estate_location_level"/>
