[FIX] hr_fingerprint_ams: upgrade to Odoo 9.0 and import improvements
* Odoo 9 remove initial menu.
* Restructure business rules folder.
* Insert tablefunc extension checker.
* Add fingerprent record name.
* Create fingerprint access rule (estate user view, hr officer edit).
* Display Attendances menu to Estate User (default only for Technical Attendances).
* Set record rule for Attendances to Estate User (limit to read only).

--- a/hr_fingerprint_ams/views/hr_fingerprint.xml
+++ b/hr_fingerprint_ams/views/hr_fingerprint.xml
@@ -145,7 +145,7 @@
         </record>
 
         <menuitem id="fingerprint_attendance" name="Fingerprint Attendance"
-                  parent="hr_attendance.menu_hr_attendance"
+                  parent="hr_attendance.menu_hr_attendance_root"
                   action="fingerprint_attendance_action"
                   groups="estate.group_user"/>
 
